--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "texte-rs"
 version = "0.1.0"
 edition = "2021"
-
+authors = ["Yasin Tatar <ytatar9@googlemail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
